Изменены импорты Добавлен docker-compose для бота и админки Немного изменен текст главного меню

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost; # или localhost
+    server_name oparinskyi.ru www.oparinskyi.ru; # или localhost
 
     location / {
         proxy_pass http://web:8000;
@@ -8,10 +8,5 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # Дополнительные настройки для статических файлов, если нужно
-    location /static/ {
-        alias /app/static/;
     }
 }
