--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ DB_PORT=5432
 DB_NAME=postgres
 DB_USER=postgres
 DB_PASSWORD=postgres
+
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=admin
+ADMIN_SECRET_KEY=12354
