--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,23 @@ services:
       POSTGRES_DB: ${DB_NAME}
     volumes:
       - db_data:/var/lib/postgresql/data
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}" ]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+
+  migrations:
+    build:
+      context: .
+      dockerfile: migrations/Dockerfile
+    container_name: migrations
+    env_file:
+      - .env
+    depends_on:
+      postgres:
+        condition: service_healthy
+    restart: on-failure
 
   bot:
     build:
@@ -21,7 +38,7 @@ services:
     env_file:
       - .env
     depends_on:
-      - postgres
+      - migrations
 
   web:
     build:
@@ -31,7 +48,7 @@ services:
     env_file:
       - .env
     depends_on:
-      - postgres
+      - migrations
 
   nginx:
     image: nginx:alpine
