--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,7 @@ DB_PASSWORD=postgres
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=admin
 ADMIN_SECRET_KEY=12354
+
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_DB=0
